# source_watch

./: .env  Cargo.toml  Readme.md  config.toml  invalid_config.toml  test_config.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_and_test.yml  lint.yml  release.yml
archive/: cassandra.rs
src/: main.rs
src/config/: config.rs  config_test.rs  mod.rs
src/db/: cassandra.rs  connection_manager.rs  data.json  db.rs  db_test.rs  elasticsearch_custom.rs  mod.rs  mongodb_custom.rs  postgres_custom.rs  query_builder.rs  redis_custom.rs
src/db/mongo/: connection.rs  connection_test.rs  mod.rs
src/db/redis/: connection.rs  connection_test.rs
src/db/sql/: connection.rs  connection_test.rs  mod.rs
src/gui/: mod.rs
src/gui/components/: index.rs
src/logging/: logger.rs  mod.rs
src/utils/: datetime.rs  errors.rs  mod.rs
src/ws/: handler.rs  handler_test.rs  mod.rs  state.rs
