[package]
name = "source_watch"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["image", "debug", "tokio"] }
tokio = { version = "1.38.0", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres_backend", "postgres"] }
mongodb = "2.8.2"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
async-std = "1.12.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
plotters = "0.3.6"
toml = "0.8.14"
magic = "0.16.2"
async-trait = "0.1.80"
futures = "0.3.30"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "json"] }
thiserror = "1.0.61"
clippy = "0.0.302"
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.21.0"
http = "1.1.0"
elasticsearch = "8.5.0-alpha.1"
cdrs-tokio = "8.1.3"


#[dependencies.iced]
#git = "https://github.com/iced-rs/iced.git"
#rev = "cdb18e610a72b4a025d7e1890140393adee5b087"
#features = ["image", "debug", "tokio"]

[dev-dependencies]
mockall = "0.12.1"
